--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": ".",
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
   "include": [
     "src"
