ejected; hash routing added; pages added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
     "noEmit": true,
     "jsx": "react",
     "baseUrl": ".",
+    "paths": {
+      "~/*": ["src/*"]
+    },
     "typeRoots": [
       "node_modules/@types"
     ]
