--- a/.eslintrc
+++ b/.eslintrc
@@ -1,22 +1,10 @@
 {
   "parser": "@typescript-eslint/parser",
-  "extends": [
-    "plugin:prettier/recommended",
-    "plugin:@typescript-eslint/eslint-recommended"
-  ],
-  "plugins": [
-    "react",
-    "prettier",
-    "standard",
-    "@typescript-eslint",
-    "react-hooks"
-  ],
+  "extends": ["plugin:prettier/recommended", "plugin:@typescript-eslint/eslint-recommended"],
+  "plugins": ["react", "prettier", "standard", "@typescript-eslint", "react-hooks"],
   "rules": {
     "prettier/prettier": "error",
-    "semi": [
-      "error",
-      "never"
-    ],
+    "semi": ["error", "never"],
     "no-unused-vars": [
       "off",
       {
