--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "prebuild": "prettier --write .",
     "build": "node scripts/build.js",
     "postbuild": "bash ./postbuild.sh",
     "test": "node scripts/test.js"
