--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "query-string": "^6.13.5",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-cookie": "^4.0.3",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
