--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,21 @@
 {
   "parser": "@typescript-eslint/parser",
-  "extends": ["react-app", "prettier", "plugin:@typescript-eslint/eslint-recommended"],
-  "plugins": ["react", "prettier", "standard", "@typescript-eslint", "react-hooks"],
+  "presets": [
+    "@babel/env",
+    "@babel/typescript"
+  ],
+  "extends": [
+    "prettier"
+  ],
+  "plugins": [
+    "react",
+    "standard",
+    "@typescript-eslint",
+    "react-hooks"
+  ],
   "rules": {
     "prettier/prettier": "error",
-    "semi": ["error", "never"],
+    "semi": "off",
     "no-unused-vars": [
       "off",
       {
