--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-markdown": "^4.3.1",
     "react-markdown-editor-lite": "^1.2.2",
     "react-router-dom": "^5.2.0",
+    "react-toast-notifications": "^2.4.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
@@ -103,6 +104,7 @@
   "devDependencies": {
     "@types/markdown-it": "^10.0.2",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-toast-notifications": "^2.4.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-standard": "^4.0.1",
