TheProject: performance fix

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
 REACT_APP_API_ENDPOINT=http://localhost:1337
-REACT_APP_SOCKET_ENDPOINT=http://127.0.0.1:1337
+REACT_APP_SOCKET_ENDPOINT=http://localhost:1337
