--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest-watch-typeahead": "0.4.2",
     "lodash": "^4.17.20",
     "markdown-it": "^11.0.1",
+    "material-ui-confirm": "^2.1.1",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
