--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "ts-pnp": "1.1.6",
     "typescript": "~3.7.2",
     "url-loader": "2.3.0",
+    "use-socket.io-client": "^1.1.0",
     "webpack": "4.42.0",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
