--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "4.3.0",
+    "formik": "^2.2.0",
+    "formik-material-ui": "^3.0.0",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
@@ -80,7 +82,8 @@
     "webpack": "4.42.0",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -113,6 +116,7 @@
     "@types/react-toast-notifications": "^2.4.0",
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-client": "^1.4.34",
+    "@types/yup": "^0.29.8",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-standard": "^4.0.1",
