--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "prebuild": "prettier --write .",
+    "prebuild": "yarn format && prettier --write .",
     "build": "node scripts/build.js",
     "postbuild": "bash ./postbuild.sh",
     "test": "node scripts/test.js",
