--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-cookie": "^4.0.3",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-json-view": "^1.19.1",
     "react-markdown": "^4.3.1",
     "react-markdown-editor-lite": "^1.2.2",
     "react-router-dom": "^5.2.0",
