--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-markdown-editor-lite": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-toast-notifications": "^2.4.0",
+    "react-use": "^15.3.4",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
