--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
+    "build-url": "^6.0.1",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "clsx": "^1.1.1",
@@ -112,7 +113,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.161",
+    "@types/lodash": "^4.14.162",
     "@types/markdown-it": "^10.0.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-toast-notifications": "^2.4.0",
