--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 REACT_APP_API_ENDPOINT=http://localhost:1338
-REACT_APP_SOCKET_ENDPOINT=http://127.0.0.1:1338
+REACT_APP_SOCKET_ENDPOINT=http://localhost:1338
 REACT_APP_COOKIE_MAXAGE_IN_DAYS=5
