--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-client": "^1.4.34",
     "@types/yup": "^0.29.8",
+    "deploy-app": "^1.0.3",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-standard": "^4.0.1",
