--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@babel/core": "7.9.0",
     "@material-ui/core": "^5.0.0-alpha.10",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/pickers": "^3.2.10",
+    "@material-ui/pickers": "^4.0.0-alpha.12",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -38,6 +38,7 @@
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "clsx": "^1.1.1",
     "css-loader": "3.4.2",
+    "date-fns": "^2.16.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
