--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "lodash": "^4.17.20",
     "markdown-it": "^11.0.1",
     "material-ui-confirm": "^2.1.1",
+    "material-ui-dropzone": "^3.5.0",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
@@ -77,6 +78,7 @@
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-headroom": "^3.0.0",
+    "react-image-gallery": "^1.0.8",
     "react-json-view": "^1.19.1",
     "react-markdown": "^4.3.1",
     "react-markdown-editor-lite": "^1.2.2",
