--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@material-ui/core": "^5.0.0-alpha.10",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^4.0.0-alpha.12",
+    "@mdi/js": "^5.9.55",
+    "@mdi/react": "^1.4.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
