--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "material-ui-confirm": "^2.1.1",
     "material-ui-dropzone": "^3.5.0",
     "mini-css-extract-plugin": "0.9.0",
+    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -89,7 +90,7 @@
     "react-use": "^15.3.4",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.2",
+    "sass-loader": "10.1.1",
     "semver": "6.3.0",
     "socket.io-client": "^2.3.1",
     "style-loader": "0.23.1",
