--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "^16.9.0",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^4.3.0",
+    "animate.css": "^4.1.1",
     "axios": "^0.20.0",
     "axios-retry": "^3.1.9",
     "babel-eslint": "10.1.0",
@@ -85,8 +86,8 @@
     "react-json-view": "^1.19.1",
     "react-markdown": "^4.3.1",
     "react-markdown-editor-lite": "^1.2.2",
+    "react-notifications-component": "^3.0.3",
     "react-router-dom": "^5.2.0",
-    "react-toast-notifications": "^2.4.0",
     "react-use": "^15.3.4",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
