--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-headroom": "^3.0.0",
     "react-image-gallery": "^1.0.8",
     "react-json-view": "^1.19.1",
+    "react-lightbox-component": "^1.2.1",
     "react-markdown": "^4.3.1",
     "react-markdown-editor-lite": "^1.2.2",
     "react-notifications-component": "^3.0.3",
