--- a/package.json
+++ b/package.json
@@ -94,6 +94,8 @@
     "resolve-url-loader": "3.1.1",
     "sass-loader": "10.1.1",
     "semver": "6.3.0",
+    "simple-react-lightbox": "^3.6.3",
+    "slugify": "^1.4.7",
     "socket.io-client": "^2.3.1",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "2.3.8",
