--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-cookie": "^4.0.3",
+    "react-countup": "^4.3.3",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-headroom": "^3.0.0",
