edit job: cancel fix; formatted

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,6 @@
-REACT_APP_API_ENDPOINT=http://localhost:1337
-REACT_APP_SOCKET_ENDPOINT=http://localhost:1337
+# REACT_APP_API_ENDPOINT=http://localhost:1337
+# REACT_APP_SOCKET_ENDPOINT=http://localhost:1337
+REACT_APP_API_ENDPOINT=http://selection4test.ru:1338
+REACT_APP_SOCKET_ENDPOINT=http://selection4test.ru:1338
+
 REACT_APP_COOKIE_MAXAGE_IN_DAYS=5
