--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,4 @@
 {
-  "lib": [
-    "es2016",
-    "dom"
-  ],
   "env": {
     "commonjs": true,
     "browser": true,
@@ -37,6 +33,7 @@
         "argsIgnorePattern": "^_",
         "caughtErrors": "none"
       }
-    ]
+    ],
+    "no-extra-boolean-cast": 0
   }
 }
