--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "7.9.0",
     "@material-ui/core": "^5.0.0-alpha.10",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@material-ui/pickers": "^4.0.0-alpha.12",
     "@mdi/js": "^5.9.55",
     "@mdi/react": "^1.4.0",
