ui fix; browserlist updated

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,4 @@ REACT_APP_API_ENDPOINT=http://selection4test.ru:1338
 REACT_APP_SOCKET_ENDPOINT=http://selection4test.ru:1338
 
 REACT_APP_COOKIE_MAXAGE_IN_DAYS=5
+REACT_APP_ADMIN_USER_IDS=5f7cdb5424e6c410027dcac5
